[package]
name = "california-reserveroirs-yew"
version = "0.1.0"
edition = "2021"
authors = ["Clinton Bowen <clinton.bowen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
chrono = { version = "0.4.22", features = ["serde"] }
charts = { git = "https://github.com/ubamrein/rustplotlib.git" }
modpow = "1.0.1"
num-bigint = "0.4.3"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
svg = "0.10.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]